# ninjam-next-plugin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build_win.bat  deploy_vst3.bat
.github/workflows/: build.yml
src/: NinjamClientService.cpp  NinjamClientService.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
